tests/test_default/bad/conflict.catala
## Article

```catala
new scope A:
  param x content int

scope A:
  def x [|true|] := 1
  def x [|true|] := 0
```
